--- a/tienda_ropa/src/main/resources/templates/home.html
+++ b/tienda_ropa/src/main/resources/templates/home.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
+    <link rel="stylesheet" th:href="@{/styles/home.css}">
+
 </head>
 <body>
-
+<h1>Inicio</h1>
+<a href="/register">Registrarse</a>
 </body>
 </html>
