--- a/tienda_ropa/src/main/resources/templates/nuevo_producto.html
+++ b/tienda_ropa/src/main/resources/templates/nuevo_producto.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" th:href="@{/styles/nuevo_producto.css}">
 </head>
 <body>
 
