--- a/tienda_ropa/src/main/resources/templates/register.html
+++ b/tienda_ropa/src/main/resources/templates/register.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Registro</title>
+    <link rel="stylesheet" th:href="@{/styles/register.css}">
 </head>
 <body>
-
+<h1>Registro</h1>
+<form th:action="@{/guardar}" th:object="${usuario}" method="post">
+    <label for="nombre">Nombre</label>
+    <input type="text" id="nombre" th:field="*{name}"><br/><br/>
+    <label for="email">Email</label>
+    <input type="text" id="email" th:field="*{email}"><br/><br/>
+    <label for="contrasena">Contraseña</label>
+    <input type="password" id="contrasena" th:field="*{password}"><br/><br/>
+    <button type="submit">Guardar</button>
+</form>
 </body>
 </html>
